RESOLVED FIXED 160592
[Fetch API] Response.blob should not assert in case the created blob is empty
https://bugs.webkit.org/show_bug.cgi?id=160592
Summary [Fetch API] Response.blob should not assert in case the created blob is empty
youenn fablet
Reported 2016-08-05 01:55:46 PDT
A response may have a body that has no data. In that case, an empty blob should be created and no assert should throw.
Attachments
Patch (3.91 KB, patch)
2016-08-05 02:04 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2016-08-05 02:04:17 PDT
WebKit Commit Bot
Comment 2 2016-08-05 09:23:32 PDT
Comment on attachment 285411 [details] Patch Clearing flags on attachment: 285411 Committed r204171: <http://trac.webkit.org/changeset/204171>
WebKit Commit Bot
Comment 3 2016-08-05 09:23:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.