[Fetch API] Response.blob should not assert in case the created blob is empty https://bugs.webkit.org/show_bug.cgi?id=160592

Patch by Youenn Fablet <youenn@apple.com> on 2016-08-05
Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/fetch/api/request/request-consume-expected.txt:
* web-platform-tests/fetch/api/request/request-consume.html: Adding response with empty blob test.

Source/WebCore:

Covered bu updated test.

* Modules/fetch/FetchBodyConsumer.cpp:
(WebCore::FetchBodyConsumer::takeAsBlob): Removing assertion as a response may have a body but with no data in it.

Canonical link: https://commits.webkit.org/178709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204171 268f45cc-cd09-0410-ab3c-d52691b4dbfc